tests/golden/diagnostics/type.txt
error[NQ-TYPE-029]: type mismatch: expected `i32`, found `bool`
  --> diag_type.nq:3:13
   |     count = true;
   |             ^^^^
